kubernetes/deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: get-ip
  labels:
    version: v0.1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: get-ip
  template:
    metadata:
      labels:
        app: get-ip
        version: v0.1
    spec:
      containers:
      - name: get-ip-server
        image: iad.ocir.io/intkaslinfields/get-ip:v0.1
        ports:
        - name: get-ip-server
          containerPort: 8080
          protocol: TCP
      imagePullSecrets:
      - name: ocir-riceo
