kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: get-ip
  labels:
    app: get-ip
    commit: v0.1
spec:
  ports:
  - port: 8080
    targetPort: 8080
  selector:
    app: get-ip
    commit:  v0.1
