kubernetes/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: get-ip
spec:
  rules:
  - host: get-ip.prod-k8s.riceo.me
    http:
      paths:
      - path: /get-ip
        backend:
          serviceName: get-ip
          servicePort: 8080
